@@ -1,9 +1,10 @@
 # -*- coding: utf-8 -*-
 
 """
-Module to support imaging correlated data.  This module provides utilities to read FITS IDI files
-into data dictionaries (as described in :mod:`lsl.sim.vis`) and build AIPY ImgW instances from the 
-data dictionaries.  Also included is a utility to sort data dictionaries by baselines.
+Module to support imaging correlated data.  This module provides utilities to 
+read FITS IDI files into data dictionaries (as described in 
+:mod:`lsl.sim.vis`) and build AIPY ImgW instances from the data dictionaries.
+Also included is a utility to sort data dictionaries by baselines.
 
 .. versionadded:: 0.5.0
 
@@ -12,6 +13,11 @@ data dictionaries.  Also included is a utility to sort data dictionaries by base
 
 .. versionchanged:: 1.0.1
 	Added the plotGriddedImage() function
+	
+.. versionchanged:: 1.1.0
+	Added the getImageRADec() and getImageAzEl() functions to complement
+	plotGriddedImage() and make it easier to work with phase centers 
+	that are not at zenith.
 """
 
 import os
@@ -35,9 +41,9 @@ from lsl.sim import vis as simVis
 from lsl.writer.fitsidi import NumericStokes
 from lsl.common.constants import c as vLight
 
-__version__ = '0.4'
+__version__ = '0.5'
 __revision__ = '$Rev$'
-__all__ = ['baselineOrder', 'sortDataDict', 'pruneBaselineRange', 'rephaseData', 'CorrelatedData', 'CorrelatedDataIDI', 'CorrelatedDataUV', 'CorrelatedDataMS', 'buildGriddedImage', 'plotGriddedImage', '__version__', '__revision__', '__all__']
+__all__ = ['baselineOrder', 'sortDataDict', 'pruneBaselineRange', 'rephaseData', 'CorrelatedData', 'CorrelatedDataIDI', 'CorrelatedDataUV', 'CorrelatedDataMS', 'buildGriddedImage', 'plotGriddedImage', 'getImageRADec', 'getImageAzEl', '__version__', '__revision__', '__all__']
 
 
 # Regular expression for trying to get the stand number out of an antenna
@@ -1128,13 +1134,17 @@ def buildGriddedImage(dataDict, MapSize=80, MapRes=0.50, MapWRes=0.10, pol='xx',
 	return im
 
 
-def plotGriddedImage(ax, gimg, interpolation='nearest', **kwargs):
+def plotGriddedImage(ax, gimg, shifted=True, interpolation='nearest', **kwargs):
 	"""
 	Given a blank matplotlib axes instance and a gridded image generated by 
 	the buildGriddedImage() function, plot the image on the axes and setup
 	the basic coordinate system.  This function returns the NumPy array of
 	the image that is plotted.
 	
+	.. versionchanged:: 1.1.0
+		Added a 'shifted' keyword to control whether or not the image
+		is centered or not.
+		
 	.. versionadded:: 1.0.1
 	"""
 	
@@ -1142,11 +1152,114 @@ def plotGriddedImage(ax, gimg, interpolation='nearest', **kwargs):
 	img = gimg.image()
 	
 	# Shift the image so that it is centered in the frame
-	imgSize = img.shape[0]	# should be square
-	img = numpy.roll(img, imgSize/2, axis=0)
-	img = numpy.roll(img, imgSize/2, axis=1)
-	
+	if shifted:
+		imgSize = img.shape[0]	# should be square
+		img = numpy.roll(img, imgSize/2, axis=0)
+		img = numpy.roll(img, imgSize/2, axis=1)
+		
 	# Plot
 	ax.imshow(img, extent=(1,-1,-1,1), origin='lower', interpolation=interpolation, **kwargs)
 	
 	return img
+
+
+def _radec_of(aa, az, alt):
+	sinDec = numpy.sin(alt)*numpy.sin(aa.lat) + numpy.cos(alt)*numpy.cos(aa.lat)*numpy.cos(az)
+	dec = numpy.arcsin( numpy.clip(sinDec, -1, 1) )
+	cosHA = (numpy.sin(alt) - numpy.sin(dec)*numpy.sin(aa.lat)) / (numpy.cos(dec)*numpy.cos(aa.lat))
+	HA = numpy.arccos( numpy.clip(cosHA, -1, 1) )
+	try:
+		if numpy.sin(az) > 0:
+			HA = 2*numpy.pi - HA
+	except ValueError:
+		toShift = numpy.where( numpy.sin(az) > 0 )
+		HA[toShift] = 2*numpy.pi - HA[toShift]	
+	RA = aa.sidereal_time() - HA
+	return RA, dec 
+
+
+def getImageRADec(gimg, aa, phaseCenter='z', shifted=True):
+	"""
+	Given a gridded image generated by the buildGriddedImage() function
+	and an AntennaArray instance, return a two-element tuple containing
+	the RA and dec. values (in radians) for each pixel in the image.  
+	
+	The 'phaseCenter' keyword controls what the phase center of the image 
+	is and defaults to zenith.
+	
+	.. versionadded: 1.1.0
+	"""
+	
+	# Get the phase center
+	if phaseCenter is not 'z':
+		phaseCenter.compute(aa)
+		pcRA, pcDec = phaseCenter.ra, phaseCenter.dec
+	else:
+		pcRA, pcDec = aa.sidereal_time(), aa.lat
+	rotInv = aipy.coord.top2eq_m(0, pcDec)
+	
+	# Extract the raw topocentric coordinates and convert to equatorial
+	top = gimg.get_top()
+	oldShape = top[0].shape
+	top = (top[0].ravel(), top[1].ravel(), top[2].ravel())
+	eq = numpy.dot(rotInv, top)
+	eq = (eq[0].reshape(oldShape), eq[1].reshape(oldShape), eq[2].reshape(oldShape))
+	
+	# Over to RA/Dec
+	ra, dec = aipy.coord.eq2radec(eq)
+	
+	# Correct for the phaseCenter
+	ra += pcRA
+	ra %= 2*numpy.pi
+	
+	# Shift, if needed
+	if shifted:
+		raSize = ra.shape[0]	# should be square
+		ra = numpy.roll(ra, raSize/2, axis=0)
+		ra = numpy.roll(ra, raSize/2, axis=1)
+		
+		decSize = dec.shape[0]	# should be square
+		dec = numpy.roll(dec, decSize/2, axis=0)
+		dec = numpy.roll(dec, decSize/2, axis=1)
+		
+	# Done
+	return ra, dec
+
+
+def getImageAzEl(gimg, aa, phaseCenter='z', shifted=True):
+	"""
+	Given a gridded image generated by the buildGriddedImage() function
+	and an AntennaArray instance, return a two-element tuple containing
+	the azimuth and elevation (altitude), both in radians, for each pixel
+	in the image.
+	
+	The 'phaseCenter' keyword controls what the phase center of the image 
+	is and defaults to zenith.
+	
+	.. versionadded: 1.1.0
+	"""
+	
+	# Get the phase center
+	if phaseCenter is not 'z':
+		phaseCenter.compute(aa)
+		pcRA, pcDec = phaseCenter.ra, phaseCenter.dec
+	else:
+		pcRA, pcDec = aa.sidereal_time(), aa.lat
+	rot = aipy.coord.eq2top_m(0, pcDec)
+	
+	# Get the RA and dec. coordinates for each pixel
+	ra, dec = getImageRADec(gimg, aa, phaseCenter=phaseCenter, shifted=shifted)
+	
+	# Convert to azimuth and elevation using PyEphem
+	bdy = aipy.amp.RadioFixedBody(0, 0)
+	
+	az, el = ra*0.0, dec*0.0
+	for i in xrange(az.shape[0]):
+		for j in xrange(az.shape[1]):
+			bdy._ra = ra[i,j]
+			bdy._dec = dec[i,j]
+			bdy.compute(aa)
+			az[i,j], el[i,j] = bdy.az, bdy.alt
+	
+	# Done
+	return az, el
